--- a/io/serialport/package.json
+++ b/io/serialport/package.json
@@ -7,8 +7,8 @@
     },
     "repository" : {
         "type":"git",
-        "url":"https://github.com/node-red/node-red-nodes.git",
-        "directory": "tree/master/io/serialport"
+        "url":"https://github.com/JorgeTorres01/node-red-nodes.git",
+        "directory": "tree/v0.0.1/io/serialport"
     },
     "license": "Apache-2.0",
     "keywords": [ "node-red", "serial" ],
